# robotic-arm-ros2-code

./: README.md
dolphin_arm_ros2_ws/src/dolphin_arm_bridge/: CMakeLists.txt  package.xml
dolphin_arm_ros2_ws/src/dolphin_arm_bridge/src/: joystick_arm.cpp  joystick_gripper.cpp  serial_bridge.cpp
dolphin_arm_ros2_ws/src/dolphin_arm_bringup/: CMakeLists.txt  package.xml
dolphin_arm_ros2_ws/src/dolphin_arm_bringup/launch/: bringup_gazebo_controller.launch.py
dolphin_arm_ros2_ws/src/dolphin_arm_controller/: CMakeLists.txt  package.xml
dolphin_arm_ros2_ws/src/dolphin_arm_controller/config/: robot_arm_controller.yaml
dolphin_arm_ros2_ws/src/dolphin_arm_controller/launch/: controller.launch.py
dolphin_arm_ros2_ws/src/dolphin_arm_custom_kinematics/: CMakeLists.txt  package.xml  plugin_description.xml
dolphin_arm_ros2_ws/src/dolphin_arm_custom_kinematics/src/: dolphin_arm_kinematics_plugin.cpp
dolphin_arm_ros2_ws/src/dolphin_arm_description/: CMakeLists.txt  package.xml
dolphin_arm_ros2_ws/src/dolphin_arm_description/config/: config.rviz
dolphin_arm_ros2_ws/src/dolphin_arm_description/launch/: gazebo.launch.py  rviz.launch.py  rviz_moveit.launch.py
dolphin_arm_ros2_ws/src/dolphin_arm_description/meshes/: BC_Connecting_Rod.stl  C-axis_Connecting_Rod.stl  C-axis_Remote_Rensing.stl  CD_Connecting_Rod.stl  Fixed_Base.stl  Jaw_Bracket.stl  Lower_Horizontal_Connecting_Rod.stl  Lower_Jaw_Gear.stl  Rotary_Base.stl  Servo.stl  Servo_Turntable.stl  Triangular_Connecting_Rod.stl  Upper_Horizontal_Honnecting_Rod.stl  Upper_Jaw_Gear.stl
dolphin_arm_ros2_ws/src/dolphin_arm_description/urdf/: robot_arm_gazebo.xacro  robot_arm_moveit_urdf.urdf.xacro  robot_arm_ros2_control.xacro  robot_arm_urdf.urdf.xacro
dolphin_arm_ros2_ws/src/dolphin_arm_joy/: CMakeLists.txt  package.xml
dolphin_arm_ros2_ws/src/dolphin_arm_joy/launch/: joy_inspector_launch.py  joy_to_arm_gazebo.launch.py
dolphin_arm_ros2_ws/src/dolphin_arm_joy/src/: joy_inspector.cpp  joy_to_arm.cpp  joy_to_gripper.cpp  joy_to_velocity.cpp
dolphin_arm_ros2_ws/src/dolphin_arm_moveitassis/: .setup_assistant  CMakeLists.txt  package.xml
dolphin_arm_ros2_ws/src/dolphin_arm_moveitassis/config/: Robot_Arm_Urdf.ros2_control.xacro  Robot_Arm_Urdf.srdf  Robot_Arm_Urdf.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
dolphin_arm_ros2_ws/src/dolphin_arm_moveitassis/launch/: demo.launch.py  gazebo_moviet.launch.py  move_group.launch.py  moveit_planning.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
